# notifex

./: .gitmodules  CMakeLists.txt  Main.qml  README.md  main.cpp  simulate_notifications.sh
